<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            android:id="@+id/userprofile_lblUserProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/slate"
            android:textStyle="bold"
            android:text="@string/UserProfile"
            android:textSize="18sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userprofile_textInputLayoutUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/signup_text_margin_top">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:backgroundTint="@color/gray"
            android:id="@+id/userprofile_edtUsername"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/slate"
            android:imeOptions="actionNext"
            android:hint="@string/UserName"/>
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/textInputDOB"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:backgroundTint="@color/gray"
                android:id="@+id/userprofile_edtDob"
                android:inputType="number"
                android:maxLines="1"
                android:clickable="true"
                android:textColor="@color/slate"
                android:focusable="false"
                android:imeOptions="actionNext"
                android:hint="@string/DOB"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userprofile_textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:backgroundTint="@color/gray"
                android:id="@+id/userprofile_edtEmailAddress"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/slate"
                android:imeOptions="actionNext"
                android:hint="@string/Email"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/userprofile_switchParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/IsparentMobile"
            android:layout_marginStart="5dp"
            android:theme="@style/Color1SwitchStyle"
            android:textColor="@color/lightgray"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userprofile_textInputLayoutParentMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <com.child.parent.kidcare.customview.PhoneEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:backgroundTint="@color/gray"
                android:id="@+id/userprofile_edtParentMobileNumber"
                android:hint="@string/ParentMobileNumber"
                android:maxLines="1"
                android:textColor="@color/slate"
                android:imeOptions="actionNext"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userprofile_textInputLayoutChildMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <com.child.parent.kidcare.customview.PhoneEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/slate"
                android:backgroundTint="@color/gray"
                android:id="@+id/userprofile_edtChildMobileNumber"
                android:hint="@string/ChildMobileNumber"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/userprofile_btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_bk"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/Register"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="Or"
            android:visibility="gone"
            android:layout_marginTop="7dp"/>
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/google"
            android:visibility="gone"
            android:layout_marginTop="7dp"/>

    </LinearLayout>



</androidx.cardview.widget.CardView>