<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SmallSp">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.child.parent.kidcare.customview.timepicker.SleepTimePicker
        android:id="@+id/timePicker"
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="6dp"
        app:divisionColor="@color/dark"
        app:labelColor="@color/slate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:progressBackgroundColor="@color/loginBkColor"
        app:progressBgStrokeWidth="28dp"
        app:progressColor="#F1DDDD"
        app:progressStrokeWidth="28dp"
        app:sleepLayoutId="@layout/layout_picker_sleep"
        app:wakeLayoutId="@layout/layout_picker_wake" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/timePicker"
        app:layout_constraintEnd_toEndOf="@+id/timePicker"
        app:layout_constraintStart_toStartOf="@+id/timePicker"
        app:layout_constraintTop_toTopOf="@+id/timePicker">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                tools:text="7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:letterSpacing="0.2"
                android:lineSpacingExtra="18sp"
                android:text="@string/schedule_hr"

                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="24sp"
                tools:text="7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:letterSpacing="0.2"
                android:lineSpacingExtra="18sp"
                android:text="@string/schedule_min"
                android:textSize="10sp" />

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerGuide"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/pickerGuide"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/centerGuide"
        app:layout_constraintTop_toBottomOf="@+id/txtwarning">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:letterSpacing="0.2"
            android:text="@string/lock_time_start"
            android:textColor="@color/slate"
            android:textSize="10sp"
            app:drawableTint="@color/slate" />


        <TextView
            android:id="@+id/tvStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:letterSpacing="0.06"
            android:lineSpacingExtra="6sp"
            android:textSize="18sp"
            tools:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/centerGuide"
        app:layout_constraintTop_toBottomOf="@+id/txtwarning">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_open"
            android:drawablePadding="8dp"
            android:drawableTint="@color/slate"
            android:letterSpacing="0.2"
            android:text="@string/lock_time_end"
            android:textColor="@color/slate"
            android:textSize="10sp"
            tools:ignore="SmallSp" />


        <TextView
            android:id="@+id/tvEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:letterSpacing="0.06"
            android:lineSpacingExtra="6sp"
            android:textSize="18sp"
            tools:text="" />
    </LinearLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxEveryDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:text="Every day"
        android:textColor="@color/slate"
        android:textSize="15sp"
        app:buttonTint="@color/primaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePicker" />

    <com.child.parent.kidcare.customview.WeekdayWidget.WeekdaysPicker
        android:id="@+id/weekdaywidget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxEveryDay"
        app:recurrence="false"
        app:sunday_first_day="true" />

    <TextView
        android:id="@+id/txtwarning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/care_time_settimer"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/btnsetTimer"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/login_button_bk"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/SetTimer"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePicker" />


</androidx.constraintlayout.widget.ConstraintLayout>
