<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SmallSp">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


     <LinearLayout
         android:id="@+id/linearlayout_feedback"
         android:layout_width="0dp"
        android:layout_height="0dp"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                android:hint="@string/Title"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/slate"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/txtMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                android:hint="@string/Description"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:textColor="@color/slate"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

         <Button
             android:id="@+id/btnSendfeedback"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/login_button_bk"
             android:layout_gravity="center"
             android:textStyle="bold"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:text="@string/SendFeedback"
             android:textAllCaps="false"
             android:textSize="16sp"
             android:layout_marginTop="@dimen/loginViewsMargin"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imglogoabout"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginTop="24sp"
        android:layout_marginBottom="24sp"
        android:visibility="gone"
        android:src="@drawable/logo_color" />

    <TextView
        android:id="@+id/txtaboutontent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log in to Kid Care. Kid Care lets you manage your daycare business from any device. Efficient childcare management means less time on business tasks and  "
        android:textSize="14sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/slate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imglogoabout"
        android:visibility="gone"
        />


</androidx.constraintlayout.widget.ConstraintLayout>